--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<li id="fifth">Each time when the game starts, the game will change the value of each crytal.</li>
 	</ul>
 	<section class="score">
-		<div id="randomNumber">Random Number: </div >
+		<div id="randomNumber"> Random Number: </div >
 		<div  id="wins">Wins:</div >
 		<div  id="loses">Loses:</div >
 	</section>
@@ -34,7 +34,7 @@
 		<a class="lightBlue"><img src="assets/images/kTMnAMbMc.png" alt="Blue"></a>
 		<a class="lightPink"><img src="assets/images/pink-diamond-clip-art-diamant-diamond-hi.png" alt="Light Pink"></a>
 	</div>
-	<section class="bottomSection">
+	<section>
 		<div id="yourScore">
 			<h2> Your score:</h2>
 		</div>
