--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<div  id="loses">Loses:</div >
 	</section>
 
-	<div id="crytals">
-		<a class="darkBlue"><img src="assets/images/diamond-clip-art-Diamond-clip-art-5.png" alt="Dark Blue"></a>
-		<a class="hotPink"><img src="assets/images/diamond-clip-art-Diamond-clip-art-6.png" alt="Hot Pink"></a>
-		<a class="lightBlue"><img src="assets/images/kTMnAMbMc.png" alt="Blue"></a>
-		<a class="lightPink"><img src="assets/images/pink-diamond-clip-art-diamant-diamond-hi.png" alt="Light Pink"></a>
+	<div id="crytal">
+		<a class="crytals-test darkBlue"><img src="assets/images/diamond-clip-art-Diamond-clip-art-5.png" alt="Dark Blue"></a>
+		<a class="crytals hotPink"><img src="assets/images/diamond-clip-art-Diamond-clip-art-6.png" alt="Hot Pink"></a>
+		<a class="crytals lightBlue"><img src="assets/images/kTMnAMbMc.png" alt="Blue"></a>
+		<a class="crytals lightPink"><img src="assets/images/pink-diamond-clip-art-diamant-diamond-hi.png" alt="Light Pink"></a>
 	</div>
 	<section>
 		<div id="yourScore">
